--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p id="date1"></p>
         </div>
       </div>
-      <div class="api3" id="ap3">
+      <div class="api3" id="api3">
         <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/community-users.js"></script>
 
