fout in de loop

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div>
           <h1 id="title"></h1>
           <p id="description"></p>
+          <p id="picture"></p>
         </div>
       </div>
       <div class="api2" id="api2">
