--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="popup/style2.css">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+  <script
+    src="https://eur03.safelinks.protection.outlook.com/?url=https%3A%2F%2Fapi.bundeling.com%2FV2%2Fdocumentation%2Fmethod%2Ffiles%2Fsingle%3Fformat%3Djson%26language%3Draw&data=05%7C01%7C502617%40vistacollege.nl%7Cdc16f33da0074f61ea7d08dad9ba218f%7Cfeb69ed2ab8f43da966dd7d6248b769e%7C0%7C0%7C638061690708687298%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=sjsRMIIMSIXATAANC5k1sTTTcz0Pyt5LEEB5eG8hiPA%3D&reserved=0"></script>
 </head>
 
 <body a link="white" vlink="white">
@@ -69,6 +71,7 @@
     <div class="API">
       <div class="api1" id="api1">
         <script src="js/news.js"></script>
+        <script src=""></script>
         <div>
           <h1 id="title"></h1>
           <p id="description"></p>
