--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       </div>
       <div class="api3" id="api3">
         <script src="js/community-users.js"></script>
+        <div>
+          <p id="image"></p>
+          <h3 id="naam"></h3>
+        </div>
 
       </div>
     </div>
