--- a/nieuws.html
+++ b/nieuws.html
@@ -65,8 +65,11 @@
     <!----------------------------------------  Begin contact  ---------------------------------------->
     <!----------------------------------------  Begin API  ---------------------------------------->
 
-    <div class="api4">nieuws API
+    <div class="api4">
       <script src="js/news.js"></script>
+      <h1 id="title"></h1>
+      <p id="description"></p>
+      <p id="picture"></p>
     </div>
 
   </div>
