api image arrya

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       <div class="api3" id="api3">
         <script src="js/community-users.js"></script>
         <div>
-          <p id="image"></p>
+          <h3 id="image"></h3>
+        </br>
           <h3 id="naam"></h3>
         </div>
 
