--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
       <div class="api3" id="api3">
         <script src="js/community-users.js"></script>
         <div>
-          <h3 id="image"></h3>
+          <h1>Leden</h1>
+          <img id="image"></img>
         </br>
-          <h3 id="naam"></h3>
+          <h4 id="naam"></h4>
         </div>
 
       </div>
