--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <script src="js/news.js"></script>
         <script src=""></script>
         <div>
-          <h1 id="title"></h1>
+          <h1>Nieuws</h1>
+          <h2 id="title"></h2>
+          <br>
           <p id="description"></p>
           <p id="picture"></p>
         </div>
@@ -79,7 +81,9 @@
       <div class="api2" id="api2">
         <script src="js/bijeenkomsten.js"></script>
         <div>
-          <h1 id="title1"></h1>
+          <h1>Events</h1>
+          <h2 id="title1"></h2>
+          <br>
           <p id="description1"></p>
           </br>
           <p id="date1"></p>
@@ -90,7 +94,7 @@
         <div>
           <h1>Leden</h1>
           <img id="image"></img>
-        </br>
+          </br>
           <h4 id="naam"></h4>
         </div>
 
